final before adding stretches & testing for bugs and optimization

--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,7 @@ main {
     border-bottom: solid 5px lightskyblue;
     padding-top: 10px;
     font-size: 40px;
+    color: orangered;
     
 }
 
